update _doc/生产部署指引.md. echo -e "n\np\n1\n\n\nw" |fdisk /dev/sda
Signed-off-by: sa <huapox@126.com>

--- a/_doc/生产部署指引.md
+++ b/_doc/生产部署指引.md
@@ -17,6 +17,7 @@ Windows-Vbox虚拟机(或Esxi/pve虚拟化)+ Barge-OS迷你容器系统, `--netw
 # 33M barge-x.iso https://github.com/bargees/barge-os/releases/download/2.12.0-x/barge-x.iso
 
 # step2: 进入系统后：fdisk /dev/sda
+echo -e "n\np\n1\n\n\nw" |fdisk /dev/sda
 mkfs.ext4 -b 4096 -i 4096 -F -L BARGE-DATA /dev/sda1 #none: e2label /dev/xxx1 LABEL1
 mkswap -L BARGE-SWAP /dev/xxx
 ```
